utoipa-gen/tests/snapshots/request_body_derive_test__request_body_with_binary.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: content
snapshot_kind: text
---
{
  "application/octet-stream": {
    "schema": {
      "items": {
        "format": "int32",
        "minimum": 0,
        "type": "integer"
      },
      "type": "array"
    }
  }
}
