utoipa-gen/tests/snapshots/request_body_derive_test__request_body_with_examples.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: content
snapshot_kind: text
---
{
  "application/json": {
    "examples": {
      "Value1": {
        "value": {
          "value": "this is value"
        }
      },
      "Value2": {
        "value": {
          "value": "this is value2"
        }
      }
    },
    "schema": {
      "$ref": "#/components/schemas/Foo"
    }
  }
}
