utoipa-gen/tests/snapshots/request_body_derive_test__request_body_with_external_ref.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: content
snapshot_kind: text
---
{
  "application/json": {
    "schema": {
      "$ref": "./MyUser.json"
    }
  }
}
