utoipa-gen/tests/snapshots/request_body_derive_test__request_body_with_only_single_content_type.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: content
snapshot_kind: text
---
{
  "application/json": {}
}
