utoipa-gen/tests/snapshots/request_body_derive_test__unit_type_request_body.snap
---
source: utoipa-gen/tests/request_body_derive_test.rs
expression: request_body
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "default": null
      }
    }
  },
  "required": true
}
